# sabba

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  conftest.py  install.sh  pyproject.toml  requirements.txt  uninstall.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
docs/: AGENT_INTEGRATION.md  LOCAL_ML.md  PROVERS_MULTI_DOMAIN_DESIGN.md  PROVER_SOUNDNESS.md  SABBA_AGENT_DESIGN.md  WATER_LAYER_DESIGN.md  ZERO_DAY_HUNTING.md
docs/img/: sabba-demo.cast
docs/scans/: README.md  cjson-1.4.6-cwe674.md  cjson-issue800-cwe125.md
examples/: README.md
examples/vuln-lab/: 01_stack_strcpy.c  02_heap_offbyone.c  03_strcat_overflow.c  04_tiny_buffer.c  05_direct_argv.c  06_local_var.c  07_stdin_scanf.c  safe_01_bounded.c  safe_02_malloc.c
sabba/: __init__.py  audit.py  chat.py  cli.py  config.py  history.py  log.py  mcp_server.py  memory.py  onboarding.py  repl.py  studio.py  tui.py  types.py  ui.py
sabba/harness/: __init__.py  agent.py  cpg.py  fuzz.py  oracle.py  orchestrator.py  prove.py  retrieval.py  tools.py  variant.py
sabba/kali/: __init__.py  catalog.py  run.py  scope.py  tools.py
sabba/llm/: __init__.py  anthropic_provider.py  base.py  claude_code.py  (+3 more)
targets/: README.md
tests/: test_agent.py  test_cascade.py  test_claude_code.py  test_cost_estimate.py  test_evm_prover.py  test_fuzz.py  test_go_prover.py  test_java_prover.py  test_kali.py  test_local_agentic.py  test_mcp_server.py  test_native_prover.py  test_node_prover.py  test_onboarding.py  test_oracle.py  test_prove.py  test_python_prover.py  test_rank_sandbox.py  test_ranker.py  test_registry.py  test_repl_ask.py  test_repl_backend.py  test_repl_composer.py  test_repl_streaming.py  test_sandbox_container.py  test_security_scan.py  test_studio.py  test_templates.py  test_traces.py  test_tui_composer.py
(+73 files in other folders)
