[project]
name = "sabba"
version = "0.2.0"
description = "SABBA: a security templates CLI and MCP server for coding agents that prove findings by running them."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "8NobleTruths", email = "238962814+8NobleTruths@users.noreply.github.com" }]
keywords = ["security", "mcp", "fuzzing", "sanitizer", "vulnerability", "agent", "prover", "oracle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "openai>=1.40",
    "anthropic>=0.49",
    "tree-sitter>=0.23",
    "tree-sitter-c>=0.23",
    "z3-solver>=4.12",
    "psutil>=5.9",
    "requests>=2.31",
    "ddgs>=6.0",
    "mcp>=1.2",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
tui = ["prompt_toolkit>=3.0", "textual>=0.60", "pyte>=0.8"]
dev = ["ruff", "pytest>=8.0", "prompt_toolkit>=3.0", "textual>=0.60", "pyte>=0.8"]
discovery = ["semgrep>=1.100"]
vertex = ["anthropic[vertex]>=0.49"]
fuzz-python = ["atheris>=2.3"]

[project.scripts]
sabba = "sabba.cli:main"

[project.urls]
Homepage = "https://github.com/8NobleTruths/sabba"
Repository = "https://github.com/8NobleTruths/sabba"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sabba*"]

[tool.setuptools.package-data]
"sabba.provers.evm" = ["templates/*.sol", "templates/*.tmpl"]
"sabba.templates" = ["commands/*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"
